--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-  ],
+, "jest-config.js", "src/__tests__/react-smoke.test.jsx"  ],
   "exclude": ["node_modules"]
 }
